# ptreq

./: README.md  cheat_sheet_development.adoc  check_file_ids.py  pyproject.toml  qtreq.yaml  readme.adoc  update_version.py
ptreq/: __init__.py  __main__.py  database_connector.py  example.adoc  get_template.py  requirement_parser.py
ptreq/templates/change_log/: entry.jinja2.adoc  head.jinja2.adoc
ptreq/templates/release_note/: entry.jinja2.adoc  structure.jinja2.adoc
ptreq/templates/requirement/: requirement.jinja2.adoc  requirement_overview.jinja.adoc
requirements/: 1_requirement_structure.adoc
requirements/1_core/: 1a_strucutre.adoc
test/: core.py  test_core.py  test_database.py  test_document.py  test_document_1.adoc
